# big-prime-number-generator

./: .gitignore  Cargo.toml  README.md
src/: generator.rs  main.rs  math.rs  primality_test.rs  tests.rs
src/benches/: math_bench.rs
