[package]
name = "big-prime-number-generator"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rand = "0.8"
num-traits = "0.2"
inquire = "0.4"
rayon = "1.5"

[dependencies.indicatif]
version = "0.17"
features = ["rayon"]

[dependencies.num-bigint]
version = "0.4"
features = ["std", "rand"]

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "math_bench"
path = "src\\benches\\math_bench.rs"
harness = false
